@@ -1,0 +1,41 @@
+<!--
+  ~ Copyright (c) 2010, Florin T.PATRASCU
+  ~
+  ~  Licensed under the Apache License, Version 2.0 (the "License");
+  ~  you may not use this file except in compliance with the License.
+  ~  You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~  Unless required by applicable law or agreed to in writing, software
+  ~  distributed under the License is distributed on an "AS IS" BASIS,
+  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~  See the License for the specific language governing permissions and
+  ~  limitations under the License.
+  -->
+
+<ehcache>
+    <diskStore path="java.io.tmpdir"/>
+    
+    <defaultCache
+            maxElementsInMemory="1000"
+            eternal="false"
+            timeToIdleSeconds="620"
+            timeToLiveSeconds="820"
+            overflowToDisk="false"
+            diskPersistent="false"
+            diskExpiryThreadIntervalSeconds="120"
+    />    
+    
+    <cache name="default_cache"
+            maxElementsInMemory="1000"
+            eternal="false"
+            timeToIdleSeconds="620"
+            timeToLiveSeconds="820"
+            overflowToDisk="false"
+            diskPersistent="false"
+            diskExpiryThreadIntervalSeconds="120"
+    />
+    
+</ehcache>
+
